# workshop-docker

./: README.md  pyproject.toml
dashboard/: requirements.txt
dashboard/src/: app.py
data/: products.csv  sales.csv  sales_data_generator.py  users.csv
data_processing/: process_and_load.py
docs/: index.md
helloworld/: Dockerfile  app.py
postgres/: create_products.sql  create_sales.sql  create_schemas.sql  create_tables.sql  create_users.sql
primeiro_compose/: README.md  docker-compose.yml
primeiro_compose/app/: app.py
